post module and other stuff implemented

--- a/modules/shared/view/header.html
+++ b/modules/shared/view/header.html
@@ -9,13 +9,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">{{metaTitle}}</a>
+            <a class="navbar-brand" ui-sref="home({ page: 1 })">{{metaTitle}}</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li ng-repeat="page in pages">
-                    <a href="#">About</a>
+                    <a href="#"></a>
                 </li>
             </ul>
         </div>
