--- a/modules/shared/view/footer.html
+++ b/modules/shared/view/footer.html
@@ -1,8 +1,10 @@
-<hr>
+<div class="clearfix"></div>
+
 <footer>
     <div class="row">
-        <div class="col-lg-12">
-            <p>Copyright &copy; Your Website 2016</p>
+        <hr>
+        <div class="col-md-12">
+            <p>Copyright &copy; {{metaTitle}} 2016</p>
         </div>
     </div>
 
