--- a/modules/shared/view/categories.html
+++ b/modules/shared/view/categories.html
@@ -4,7 +4,7 @@
         <div class="col-md-12">
             <ul class="list-unstyled">
                 <li ng-repeat="category in categories" ng-if="categories.length > 0">
-                    <a href="{{category.link}}">{{category.name}} ({{category.count}})</a>
+                    <a ui-sref="categoryDetail({id: category.id})">{{category.name}} ({{category.count}})</a>
                 </li>
                 <p ng-if="categories.length == 0">There is no category</p>
             </ul>
